# ollama

./: README.md
.devcontainer/: devcontainer.json  dockerfile
llm/ext_server/: CMakeLists.txt  ext_server.h  main.cpp
llm/generate/: gen_linux.sh
